some changes done

--- a/file.html
+++ b/file.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=git st, initial-scale=1.0">
-    <title>Document</title>
+    <title>Documjfkgvbgdfjkb ent</title>
 </head>
 <body>
-    
+    <div class="heading">My website</div>
+    <h1>go to</h1>
+    <link rel="stylesheet" href="https://www.google.com/">
+    <button>Submit</button>
 </body>
 </html>
