--- a/file.html
+++ b/file.html
@@ -9,6 +9,6 @@
     <div class="heading">My website</div>
     <h1>go to</h1>
     <link rel="stylesheet" href="https://www.google.com/">
-    <button>Submit now</button>
+    <button>Submit noww</button>
 </body>
 </html>
